[tool.poetry]
name = "srodecoderring"
version = "0.1.0"
description = "ML model for interpreting the contents of DICOM Spatial Registration objects in the context of radiotherapy image-guidance\u001b"
authors = ["Derek Lane <dglane001@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
rich = "^13.6.0"
numpy = "^1.26.0"
scipy = "^1.11.3"
pytorch-lightning = "^2.0.9.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
